# gate-hub

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.toml  .yamllint  .yamllint.yml  Fix-HAConfig.ps1  Fix-TemplatesYaml.ps1  ISSUES_PLAN.md  README.md  TODO.md  automations.yaml  configuration.yaml  docker-compose.automation-builder.yml  fakesecrets.yaml  govee_learning.yaml  ha_optimization_issues.sh  home-assistant.log.1  home-assistant_v2.db-shm  home-assistant_v2.db-wal  humidor.yaml  input_boolean.yaml  input_button.yaml  input_number.yaml  input_select.yaml  input_text.yaml  light.yaml  mkdocs.yml  noderd.cloudy.js  noderd.cloudy.json  noderd.js  noderd.sun.js  noderd.sun.json  ps.ps1  pyproject.toml  scenes.yaml  scripts.yaml  (+17 more)
.ci/: fakesecrets.yaml  run_hass_check.py
.devcontainer/: Dockerfile  devcontainer.json  haos-ssh
.devcontainer/profile.d/: haos.sh
.entities/: entities_by_domain.csv  entities_with_areas.csv  entities_without_area.csv  entity_attributes.csv  entity_dump.json  entity_list.csv  huskers_entities.ndjson  huskers_entities_full.json  huskers_entities_raw.json  huskers_entity_attributes.csv
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adr.yml  automation-spec.yml  bug-report.yml  feature-request.yml
.github/seed/: ha_issues.md
.github/workflows/: ai_automation.yml  bump-haos-features.yml  bump-haos-features.yml.yaml  ci.yml  ha-config-check.restore  ha-config-check.yaml  ha-config-check.yml  lint.yml  repo-metrics.yml  seed_issues.yml
.ssh/: config  haos_git_key  haos_git_key.pub  id_rsa  id_rsa.derived.pub  id_rsa.pub  known_hosts
backups/: huskers-dashboard.yaml.20250914-112042
ble_monitor/: ble_parser
config/dashboard/: stocks_golden_cross.dashboard.yaml
config/pyscript/: stocks_golden_cross.py
dashboard_automation/: .dashboard_states.json  .env.example  README.md  __init__.py  app.py  config.py  config_snapshot.json  dashboard-automation.service  docker-compose.browserless.yml  documentation.py  monitor.py  pyproject.toml  run.sh  screenshot.py
dashboards/: automations.dashboard.yaml  automations_debug.yaml  f1-dashboard.yaml  f1.dashboard.yaml  holiday.dashboard.yaml  huskers-all.yaml  huskers-auto.yaml  huskers-dashboard.yaml  huskers-teamtracker.yaml  huskers.dashboard.yaml  huskers.yaml  huskers_live_debug.yaml  kiosk-dashboard.yaml  kiosk.dashboard.yaml  kiosk_lights.yaml  network-dashboard.yaml  network.dashboard.yaml  repo-metrics.dashboard.yaml  test-resources.yaml  weather-dashboard.yaml  weather.dashboard.yaml  weather_dashboard.yaml
docker/: Dockerfile.metrics
docs/: README.md  ai-automation-builder.md  ci.md  configuration-review.md  duplicate_report.md  hypermodern_learning.md  index.md  infrastructure.md  metrics-rerun-prompt.md  monitoring-stack.md  optimizing_code.md  pre-commit.md  reolink_startup_review.md  repo-metrics-automation.md  repo_metrics_dashboard.md
input_number/: input_number.yaml  input_number_chase.yaml
lovelace/: README.md  dashboard_huskers.yaml  huskers.yaml  huskers_controls.yaml  huskers_dashboard.yaml  huskers_hq.yaml  huskers_led_test.yaml
old/: huskers.old  huskers_enhanced_automations.old
scripts/: capture_dashboard_screenshots.py  export_entities.py  find_duplicates.py  gen_commit_artifacts.py  gretna_sanitation.py  ha_check_portable.py  ha_check_portable.sh  hass_check.py  hass_check.sh  metrics.py  render_automation_descriptions.py  run_dashboard_captures.py  update_loc_stats.py
shared/: automation_descriptions.yaml
site/: 404.html  index.html
tests/: conftest.py  test_capture_dashboard_screenshots.py  test_ha_check_portable.py  test_hass_check.py  test_network_monitor_templates.py
themes/: huskers.yaml
ui-lovelace/: README.md  huskers.yaml
zigbee2mqtt/: configuration.yaml  configuration_backup_v3.yaml  coordinator_backup.json  database.db  state.json
(+397 files in other folders)
