[tool.poetry]
name = "gate-hub"
version = "0.1.0"
description = "Home Assistant configuration managed with Poetry."
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
yamllint = "1.35.1"
pre-commit = "3.7.1"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
