[tool.poetry]
name = "gate-hub"
version = "0.1.0"
description = "Home Assistant configuration managed with Poetry."
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
yamllint = "1.35.1"
pre-commit = "3.7.1"
flake8 = "*"
black = "*"
ruff = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79

[tool.black]
line-length = 79

[tool.ruff]
target-version = "py311"
line-length = 79
extend-exclude = [
  ".venv", "venv", "node_modules", "backup",
  "zigbee2mqtt", "themes", "blueprints",
  "custom_components/ble_monitor",
  "custom_components/hacs",
  "custom_components/teamtracker",
  "custom_components/wundergroundpws",
  "custom_components/tplink_router",
]

[tool.ruff.lint]
select = [
  "E","F","W",      # pycodestyle/pyflakes
  "I",              # import sorting (isort)
  "UP",             # pyupgrade
  "B",              # bugbear
  "C4","SIM","RET", # comps/simplify/returns
  "PIE","TID","RUF" # misc & ruff-native
]
# Let Black (or ruff-format) own wrapping
ignore = ["E501"]

# Keep import sorting deterministic and “as”-combine
[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["custom_components", "scripts", "tools", "huskers"]

# Enable if/when you switch to Ruff’s formatter (Option B)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
