[tool.poetry]
name = "gate-hub"
version = "0.1.0"
description = "Home Assistant configuration managed with Poetry."
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
yamllint = "1.35.1"
pre-commit = "3.7.1"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Ruff only (drop [tool.flake8] and [tool.black]) ---
[tool.ruff]
target-version = "py311"
line-length = 79
extend-exclude = [
  ".venv", "venv", "node_modules", "backup",
  "zigbee2mqtt", "themes", "blueprints",
  "custom_components/ble_monitor",
  "custom_components/hacs",
  "custom_components/teamtracker",
  "custom_components/wundergroundpws",
  "custom_components/tplink_router",
]

[tool.ruff.lint]
select = [
  "E","F","W",      # pycodestyle/pyflakes
  "I",              # import sorting
  "UP",             # pyupgrade
  "B",              # bugbear
  "C4","SIM","RET", # comps/simplify/returns
  "PIE","TID","RUF" # misc & ruff-native
]
ignore = ["E501"]  # formatter controls wrapping

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["custom_components", "scripts", "tools", "automation_builder"]
known-third-party = ["homeassistant", "aiohttp", "voluptuous", "async_timeout"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
